crates/loadsmith-loader/tests/snapshots/fixtures__Mikadoe-MikasModCollection@0.13.3.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
MikasModCollection.lua: mods/Mikadoe-MikasModCollection/MikasModCollection.lua
README.md: mods/Mikadoe-MikasModCollection/README.md
assets/1x/c_mmc_ace_of_pentacles.png: mods/Mikadoe-MikasModCollection/assets/1x/c_mmc_ace_of_pentacles.png
assets/1x/c_mmc_incense.png: mods/Mikadoe-MikasModCollection/assets/1x/c_mmc_incense.png
assets/1x/c_mmc_page_of_pentacles.png: mods/Mikadoe-MikasModCollection/assets/1x/c_mmc_page_of_pentacles.png
assets/1x/j_mmc_abbey_road.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_abbey_road.png
assets/1x/j_mmc_aurora_borealis.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_aurora_borealis.png
assets/1x/j_mmc_batman.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_batman.png
assets/1x/j_mmc_blackjack.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_blackjack.png
assets/1x/j_mmc_blue_moon.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_blue_moon.png
assets/1x/j_mmc_bomb.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_bomb.png
assets/1x/j_mmc_broke.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_broke.png
assets/1x/j_mmc_buy_one_get_one.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_buy_one_get_one.png
assets/1x/j_mmc_camper.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_camper.png
assets/1x/j_mmc_cheapskate.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_cheapskate.png
assets/1x/j_mmc_cheat.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_cheat.png
assets/1x/j_mmc_checklist.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_checklist.png
assets/1x/j_mmc_cicero.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_cicero.png
assets/1x/j_mmc_commander.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_commander.png
assets/1x/j_mmc_cultist.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_cultist.png
assets/1x/j_mmc_dagonet.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_dagonet.png
assets/1x/j_mmc_dawn.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_dawn.png
assets/1x/j_mmc_delayed.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_delayed.png
assets/1x/j_mmc_eye_chart.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_eye_chart.png
assets/1x/j_mmc_finishing_blow.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_finishing_blow.png
assets/1x/j_mmc_fisherman.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_fisherman.png
assets/1x/j_mmc_fishing_license.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_fishing_license.png
assets/1x/j_mmc_football_card.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_football_card.png
assets/1x/j_mmc_glass_cannon.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_glass_cannon.png
assets/1x/j_mmc_glue.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_glue.png
assets/1x/j_mmc_go_for_broke.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_go_for_broke.png
assets/1x/j_mmc_gold_bar.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_gold_bar.png
assets/1x/j_mmc_grudgeful.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_grudgeful.png
assets/1x/j_mmc_harp_seal.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_harp_seal.png
assets/1x/j_mmc_historical.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_historical.png
assets/1x/j_mmc_horseshoe.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_horseshoe.png
assets/1x/j_mmc_impatient.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_impatient.png
assets/1x/j_mmc_incomplete.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_incomplete.png
assets/1x/j_mmc_investor.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_investor.png
assets/1x/j_mmc_monopolist.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_monopolist.png
assets/1x/j_mmc_mountain_climber.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_mountain_climber.png
assets/1x/j_mmc_nebula.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_nebula.png
assets/1x/j_mmc_one_of_us.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_one_of_us.png
assets/1x/j_mmc_pack_a_punch.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_pack_a_punch.png
assets/1x/j_mmc_plus_one.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_plus_one.png
assets/1x/j_mmc_prime_time.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_prime_time.png
assets/1x/j_mmc_printer.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_printer.png
assets/1x/j_mmc_psychic.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_psychic.png
assets/1x/j_mmc_rigged.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_rigged.png
assets/1x/j_mmc_savings.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_savings.png
assets/1x/j_mmc_scoring_test.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_scoring_test.png
assets/1x/j_mmc_scratch_card.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_scratch_card.png
assets/1x/j_mmc_seal_collector.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_seal_collector.png
assets/1x/j_mmc_seal_steal.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_seal_steal.png
assets/1x/j_mmc_shackles.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_shackles.png
assets/1x/j_mmc_showoff.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_showoff.png
assets/1x/j_mmc_sniper.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_sniper.png
assets/1x/j_mmc_special_edition.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_special_edition.png
assets/1x/j_mmc_statistic.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_statistic.png
assets/1x/j_mmc_stockpiler.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_stockpiler.png
assets/1x/j_mmc_straight_nate.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_straight_nate.png
assets/1x/j_mmc_street_fighter.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_street_fighter.png
assets/1x/j_mmc_student_loans.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_student_loans.png
assets/1x/j_mmc_suit_alley.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_suit_alley.png
assets/1x/j_mmc_tax_collector.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_tax_collector.png
assets/1x/j_mmc_training_wheels.png: mods/Mikadoe-MikasModCollection/assets/1x/j_mmc_training_wheels.png
assets/2x/c_mmc_ace_of_pentacles.png: mods/Mikadoe-MikasModCollection/assets/2x/c_mmc_ace_of_pentacles.png
assets/2x/c_mmc_incense.png: mods/Mikadoe-MikasModCollection/assets/2x/c_mmc_incense.png
assets/2x/c_mmc_page_of_pentacles.png: mods/Mikadoe-MikasModCollection/assets/2x/c_mmc_page_of_pentacles.png
assets/2x/j_mmc_abbey_road.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_abbey_road.png
assets/2x/j_mmc_aurora_borealis.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_aurora_borealis.png
assets/2x/j_mmc_batman.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_batman.png
assets/2x/j_mmc_blackjack.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_blackjack.png
assets/2x/j_mmc_blue_moon.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_blue_moon.png
assets/2x/j_mmc_bomb.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_bomb.png
assets/2x/j_mmc_broke.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_broke.png
assets/2x/j_mmc_buy_one_get_one.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_buy_one_get_one.png
assets/2x/j_mmc_camper.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_camper.png
assets/2x/j_mmc_cheapskate.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_cheapskate.png
assets/2x/j_mmc_cheat.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_cheat.png
assets/2x/j_mmc_checklist.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_checklist.png
assets/2x/j_mmc_cicero.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_cicero.png
assets/2x/j_mmc_commander.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_commander.png
assets/2x/j_mmc_cultist.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_cultist.png
assets/2x/j_mmc_dagonet.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_dagonet.png
assets/2x/j_mmc_dawn.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_dawn.png
assets/2x/j_mmc_delayed.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_delayed.png
assets/2x/j_mmc_eye_chart.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_eye_chart.png
assets/2x/j_mmc_finishing_blow.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_finishing_blow.png
assets/2x/j_mmc_fisherman.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_fisherman.png
assets/2x/j_mmc_fishing_license.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_fishing_license.png
assets/2x/j_mmc_football_card.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_football_card.png
assets/2x/j_mmc_glass_cannon.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_glass_cannon.png
assets/2x/j_mmc_glue.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_glue.png
assets/2x/j_mmc_go_for_broke.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_go_for_broke.png
assets/2x/j_mmc_gold_bar.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_gold_bar.png
assets/2x/j_mmc_grudgeful.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_grudgeful.png
assets/2x/j_mmc_harp_seal.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_harp_seal.png
assets/2x/j_mmc_historical.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_historical.png
assets/2x/j_mmc_horseshoe.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_horseshoe.png
assets/2x/j_mmc_impatient.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_impatient.png
assets/2x/j_mmc_incomplete.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_incomplete.png
assets/2x/j_mmc_investor.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_investor.png
assets/2x/j_mmc_monopolist.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_monopolist.png
assets/2x/j_mmc_mountain_climber.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_mountain_climber.png
assets/2x/j_mmc_nebula.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_nebula.png
assets/2x/j_mmc_one_of_us.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_one_of_us.png
assets/2x/j_mmc_pack_a_punch.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_pack_a_punch.png
assets/2x/j_mmc_plus_one.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_plus_one.png
assets/2x/j_mmc_prime_time.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_prime_time.png
assets/2x/j_mmc_printer.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_printer.png
assets/2x/j_mmc_psychic.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_psychic.png
assets/2x/j_mmc_rigged.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_rigged.png
assets/2x/j_mmc_savings.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_savings.png
assets/2x/j_mmc_scoring_test.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_scoring_test.png
assets/2x/j_mmc_scratch_card.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_scratch_card.png
assets/2x/j_mmc_seal_collector.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_seal_collector.png
assets/2x/j_mmc_seal_steal.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_seal_steal.png
assets/2x/j_mmc_shackles.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_shackles.png
assets/2x/j_mmc_showoff.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_showoff.png
assets/2x/j_mmc_sniper.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_sniper.png
assets/2x/j_mmc_special_edition.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_special_edition.png
assets/2x/j_mmc_statistic.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_statistic.png
assets/2x/j_mmc_stockpiler.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_stockpiler.png
assets/2x/j_mmc_straight_nate.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_straight_nate.png
assets/2x/j_mmc_street_fighter.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_street_fighter.png
assets/2x/j_mmc_student_loans.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_student_loans.png
assets/2x/j_mmc_suit_alley.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_suit_alley.png
assets/2x/j_mmc_tax_collector.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_tax_collector.png
assets/2x/j_mmc_training_wheels.png: mods/Mikadoe-MikasModCollection/assets/2x/j_mmc_training_wheels.png
changelog.md: mods/Mikadoe-MikasModCollection/changelog.md
icon.png: mods/Mikadoe-MikasModCollection/icon.png
lovely.toml: mods/Mikadoe-MikasModCollection/lovely.toml
manifest.json: mods/Mikadoe-MikasModCollection/manifest.json
