crates/loadsmith-loader/tests/snapshots/fixtures__NotNet-GDWeave@2.0.14.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
GDWeave/core/FASM-LICENSE.TXT: "./GDWeave/core/FASM-LICENSE.TXT"
GDWeave/core/FASM.DLL: "./GDWeave/core/FASM.DLL"
GDWeave/core/FASMX64.DLL: "./GDWeave/core/FASMX64.DLL"
GDWeave/core/GDWeave.deps.json: "./GDWeave/core/GDWeave.deps.json"
GDWeave/core/GDWeave.dll: "./GDWeave/core/GDWeave.dll"
GDWeave/core/GDWeave.pdb: "./GDWeave/core/GDWeave.pdb"
GDWeave/core/GDWeave.runtimeconfig.json: "./GDWeave/core/GDWeave.runtimeconfig.json"
GDWeave/core/Iced.dll: "./GDWeave/core/Iced.dll"
GDWeave/core/Reloaded.Assembler.dll: "./GDWeave/core/Reloaded.Assembler.dll"
GDWeave/core/Reloaded.Assembler.targets: "./GDWeave/core/Reloaded.Assembler.targets"
GDWeave/core/Reloaded.Hooks.Definitions.dll: "./GDWeave/core/Reloaded.Hooks.Definitions.dll"
GDWeave/core/Reloaded.Hooks.dll: "./GDWeave/core/Reloaded.Hooks.dll"
GDWeave/core/Reloaded.Memory.Buffers.dll: "./GDWeave/core/Reloaded.Memory.Buffers.dll"
GDWeave/core/Reloaded.Memory.Sigscan.Definitions.dll: "./GDWeave/core/Reloaded.Memory.Sigscan.Definitions.dll"
GDWeave/core/Reloaded.Memory.Sigscan.dll: "./GDWeave/core/Reloaded.Memory.Sigscan.dll"
GDWeave/core/Reloaded.Memory.dll: "./GDWeave/core/Reloaded.Memory.dll"
GDWeave/core/Serilog.Sinks.Console.dll: "./GDWeave/core/Serilog.Sinks.Console.dll"
GDWeave/core/Serilog.Sinks.File.dll: "./GDWeave/core/Serilog.Sinks.File.dll"
GDWeave/core/Serilog.dll: "./GDWeave/core/Serilog.dll"
README.md: ~
icon.png: ~
manifest.json: ~
winmm.dll: "./winmm.dll"
