crates/loadsmith-loader/tests/snapshots/fixtures__ResoniteModding-BepisLoader@1.6.0.snap
---
source: crates/loadsmith-loader/tests/fixtures.rs
expression: mapped
---
BepInExPack/BepInEx/core/0Harmony.dll: "./BepInEx/core/0Harmony.dll"
BepInExPack/BepInEx/core/0Harmony.pdb: "./BepInEx/core/0Harmony.pdb"
BepInExPack/BepInEx/core/0Harmony.xml: "./BepInEx/core/0Harmony.xml"
BepInExPack/BepInEx/core/BepInEx.Core.dll: "./BepInEx/core/BepInEx.Core.dll"
BepInExPack/BepInEx/core/BepInEx.Core.xml: "./BepInEx/core/BepInEx.Core.xml"
BepInExPack/BepInEx/core/BepInEx.NET.Common.dll: "./BepInEx/core/BepInEx.NET.Common.dll"
BepInExPack/BepInEx/core/BepInEx.NET.Common.xml: "./BepInEx/core/BepInEx.NET.Common.xml"
BepInExPack/BepInEx/core/BepInEx.NET.CoreCLR.deps.json: "./BepInEx/core/BepInEx.NET.CoreCLR.deps.json"
BepInExPack/BepInEx/core/BepInEx.NET.CoreCLR.dll: "./BepInEx/core/BepInEx.NET.CoreCLR.dll"
BepInExPack/BepInEx/core/BepInEx.NET.CoreCLR.xml: "./BepInEx/core/BepInEx.NET.CoreCLR.xml"
BepInExPack/BepInEx/core/BepInEx.Preloader.Core.dll: "./BepInEx/core/BepInEx.Preloader.Core.dll"
BepInExPack/BepInEx/core/BepInEx.Preloader.Core.xml: "./BepInEx/core/BepInEx.Preloader.Core.xml"
BepInExPack/BepInEx/core/Microsoft.Win32.SystemEvents.dll: "./BepInEx/core/Microsoft.Win32.SystemEvents.dll"
BepInExPack/BepInEx/core/Mono.Cecil.Mdb.dll: "./BepInEx/core/Mono.Cecil.Mdb.dll"
BepInExPack/BepInEx/core/Mono.Cecil.Pdb.dll: "./BepInEx/core/Mono.Cecil.Pdb.dll"
BepInExPack/BepInEx/core/Mono.Cecil.Rocks.dll: "./BepInEx/core/Mono.Cecil.Rocks.dll"
BepInExPack/BepInEx/core/Mono.Cecil.dll: "./BepInEx/core/Mono.Cecil.dll"
BepInExPack/BepInEx/core/MonoMod.Backports.dll: "./BepInEx/core/MonoMod.Backports.dll"
BepInExPack/BepInEx/core/MonoMod.Core.dll: "./BepInEx/core/MonoMod.Core.dll"
BepInExPack/BepInEx/core/MonoMod.ILHelpers.dll: "./BepInEx/core/MonoMod.ILHelpers.dll"
BepInExPack/BepInEx/core/MonoMod.Iced.dll: "./BepInEx/core/MonoMod.Iced.dll"
BepInExPack/BepInEx/core/MonoMod.RuntimeDetour.dll: "./BepInEx/core/MonoMod.RuntimeDetour.dll"
BepInExPack/BepInEx/core/MonoMod.Utils.dll: "./BepInEx/core/MonoMod.Utils.dll"
BepInExPack/BepInEx/core/SemanticVersioning.dll: "./BepInEx/core/SemanticVersioning.dll"
BepInExPack/BepInEx/core/System.Drawing.Common.dll: "./BepInEx/core/System.Drawing.Common.dll"
BepInExPack/BepInEx/core/System.Private.Windows.Core.dll: "./BepInEx/core/System.Private.Windows.Core.dll"
BepInExPack/BepInEx/core/System.Private.Windows.GdiPlus.dll: "./BepInEx/core/System.Private.Windows.GdiPlus.dll"
BepInExPack/BepInEx/icon.ico: "./BepInEx/icon.ico"
BepInExPack/BepisLoader.deps.json: "./BepisLoader.deps.json"
BepInExPack/BepisLoader.dll: "./BepisLoader.dll"
BepInExPack/BepisLoader.runtimeconfig.json: "./BepisLoader.runtimeconfig.json"
BepInExPack/LinuxBootstrap.sh: "./LinuxBootstrap.sh"
BepInExPack/hookfxr.ini: "./hookfxr.ini"
BepInExPack/hostfxr.dll: "./hostfxr.dll"
LICENSE: ~
README.md: ~
icon.png: ~
manifest.json: ~
